# hybberish

./: .clang-format-ignore  .clang-format-include  .gitignore  LICENSE  Manifest.toml  README.md  flowstar.jl  meson.build  pluto_notebook.jl  run_pluto.sh
.github/workflows/: meson-actions.yml
doxygen/: Doxyfile
src/fun/: funexp.c  funexp.h  meson.build  transformations.c  transformations.h
src/parsers/: meson.build  odeparse.h  odes.l  odes.y  varparse.h  vars.l  vars.y
src/python/: Hybberish.ipynb  main.py  tm_integration.py
src/systems/: meson.build  syslineq.h  sysode.c  sysode.h
src/taylormodel/: interval.c  interval.h  meson.build  polynomiallist.c  polynomiallist.h  taylormodel.c  taylormodel.h  tmflowpipe.c  tmflowpipe.h
src/utils/: meson.build  utils.c  utils.h
src/varmath/: interval.c  interval.h  meson.build  variables.c  variables.h
tests/: definite_integral_test.c  derivative_test.c  fmopn.c  fun_exp_equivalence_test.c  fun_exp_polynomials_test.c  fun_exp_test.c  integral_test.c  interval_test.c  islinear_test.c  meson.build  odeparse_test.c  pipeline_test.c  sysode_exp_test.c  sysode_explist_test.c  taylormodel_test.c  tmflowpipe_test.c  transformations_test.c  varparse_test.c
